--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ def versions = [
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile("org.springframework.boot:spring-boot-starter-web")
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compile("org.liquibase:liquibase-core:${versions.liquibase}")
 	compile("org.postgresql:postgresql:${versions.postgresql}")
 	compile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
